force-app/main/default/objects/LSF_Price_Sheet_Assignment__c/LSF_Price_Sheet_Assignment__c.object-meta.xml
<CustomObject>
    <label>LSF Price Sheet Assignment</label>
    <nameField>
        <displayFormat>PSA-{0000000000}</displayFormat>
        <label>Price Sheet Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LSF Price Sheet Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>