force-app/main/default/objects/LSF_Price_Sheet_Assignment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Price Sheet Assignments</relationshipLabel>
    <relationshipName>LSF_Price_Sheet_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>