force-app/main/default/objects/LSF_Price_Sheet_Assignment__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>LSF_Price_Book__c</referenceTo>
    <relationshipLabel>LSF Price Sheet Assignments</relationshipLabel>
    <relationshipName>LSF_Price_Sheet_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>