force-app/main/default/objects/LSF_Price_Sheet_Assignment__c/fields/Price_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Price_Sheet__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Price Sheet</label>
    <referenceTo>LSF_Price_Sheet__c</referenceTo>
    <relationshipLabel>Price Sheet Assignments</relationshipLabel>
    <relationshipName>LSF_Price_Sheet_Assignments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>