force-app/main/default/objects/LSF_Price_Sheet_Assignment__c/recordTypes/Price_Book_Assignment.recordType-meta.xml
<RecordType>
    <fullName>Price_Book_Assignment</fullName>
    <active>true</active>
    <label>Price Book Assignment</label>
</RecordType>